# sentinal-ai

./: .gitignore  DEPLOYMENT.md  Dockerfile  Makefile  PACKAGE_MANAGEMENT.md  README.md  config.yaml  deploy_all_agents.py  pyproject.toml  requirements.txt  sentinel_ai_deployment_7b36b92a.json
docs/: agent-development.md  api.md  architecture.md  configuration.md
examples/: demo_conductor.py  demo_predictive.py  mock_incident.py
scripts/: conductor.py  deploy_cloud_run.sh  setup_gcp.sh  uv_manage.sh
src/agents/: base_agent.py  conductor.py  diagnostic.py  drift_detection.py  economist.py  predictive_agent.py  remediation.py  reporting.py  verification.py
src/communication/: agent_registry.py  message_bus.py
src/config/: settings.py
src/governance/: README.md  autonomy_controller.py  governance_rules.py
src/models/: agent_state.py  governance.py  incident.py
src/services/: bigquery_client.py  gemini_client.py  model_registry_client.py  pipeline_client.py  vertex_ai_client.py
src/utils/: logging_setup.py
