[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentinel-ai"
version = "0.1.0"
description = "AI-powered governance and monitoring system"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Sentinel AI Team"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Google Cloud and Vertex AI
    "google-cloud-aiplatform>=1.38.0",
    "google-cloud-bigquery>=3.11.0",
    "google-cloud-pubsub>=2.18.0",
    "google-cloud-storage>=2.10.0",
    "google-cloud-monitoring>=2.15.0",
    "google-auth>=2.22.0",
    
    # LangChain for agent orchestration
    "langchain>=0.1.0",
    "langchain-google-vertexai>=0.1.0",
    "langchain-community>=0.0.10",
    
    # Data processing and ML utilities
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "pydantic>=2.0.0",
    
    # Async and concurrency
    "asyncio-mqtt>=0.13.0",
    "aiohttp>=3.8.0",
    
    # Configuration and environment
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    
    # Logging and monitoring
    "structlog>=23.1.0",
    "prometheus-client>=0.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/pyproject.toml",
]
